public/link.css
.link {
    display: grid;
    position: relative;
    grid-template-columns: 1fr 130px;
    grid-template-rows: auto;
    gap: 10px;
    padding: 10px 15px;
    border: 1px solid #66666639;
    margin-top: 1.5rem;
    border-radius: 8px;
    grid-template-areas: 'expires      presence'
                         'blacklist    theme'
                         'terms        terms'
                         'friends-only friends-only';
    overflow: hidden;
}

.link > .link--backdrop {
    object-fit: cover;
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: -10;
    opacity: 0.1;
    filter: blur(6px) brightness(0.6);
}

.link em {
    color: var(--border);
}

.link em ion-icon {
    font-size: 1.2em;
    transform: translateY(0.2rem);
}

a:hover > .link {
    border-color: var(--accent);
}

.link::after {
    content: attr(data-feed-number);
    font-size: 11rem;
    font-weight: bold;
    font-style: italic;
    display: block;
    position: absolute;
    bottom: -70px;
    right: 0;
    color: var(--accent);
    opacity: 0.05;
}

.link--presence {
    grid-area: presence;
    text-align: right;
}

strong.online {
    color: var(--success);
}

strong.online::after {
    content: '';
    display: inline-block;
    width: 1ch;
    height: 1ch;
    background: currentColor;
    border-radius: 100%;
    margin-left: 0.25rem;
}

strong.offline {
    color: var(--text);
}

.link--theme {
    grid-area: theme;
    color: var(--border);
    text-align: right;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.link--theme ion-icon {
    transform: translateY(0.1em);
}

.link--expires {
    grid-area: expires;
}

.link--blacklist {
    grid-area: blacklist;
}

.link--terms {
    grid-area: terms;
}

.link--status-bar {
    grid-area: friends-only;
    height: 2rem;
    padding: 0.3rem 0;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas: 'lock name client';
}

.link--status-bar > * {
    display: flex;
    align-items: center;
}


.link--status-bar > em {
    order: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    grid-area: name;
}

.link--device-in-use {
    color: var(--border);
    justify-content: flex-end;
    grid-area: client;
}

.link--device-in-use > svg {
    margin-left: 0.8rem;
}

.link--device-in-use ion-icon {
    font-size: 1.3rem;
    margin-left: 0.5rem;
}

.link--friends-only {
    align-self: flex-start;
    display: flex;
    align-items: center;
    text-decoration: none;
    grid-area: lock;
}

.link--friends-only ion-icon {
    margin-right: 0.5rem;
    font-size: 1.7rem;
}

.link--flashes {
    text-align: center;
}

.link--flashes .flash--danger,
.link--flashes .flash--success {
    display: inline-block;
    padding: 0.3rem 0.7rem;
}

.link--flashes .flash--danger {
    background: var(--danger);
    color: #dcdcdc;
}

.link--flashes .flash--success {
    background: var(--bg-accent);
    border: solid 1px var(--success);
}

/** Forms */

input[type=checkbox] {
    cursor: pointer;
    transform: translateY(-0.3em);
}

input[type=checkbox].toggle-next + * {
    display: none;
}
input[type=checkbox].toggle-next:checked + * {
    display: block;
}

input[type=text],
textarea {
    margin-bottom: 1rem;
}

label {
    margin-bottom: 0.5rem;
}

#link_theme {
    margin-top: 0.5rem;
    width: 180px;
}

.link--form--theme label {
    display: flex;
    align-content: center;
    gap: 0.4rem;
}
.link--form--theme label input[type=checkbox] {
    transform: translateY(-0.1em);
}

.link--form--checkbox-row {
    display: flex;
    align-items: center;
    margin: 0.5rem 0 1rem;
    cursor: pointer;
}

.link--form--checkbox-row input {
    margin: 0;
}

.link--form--checkbox-row label {
    display: flex;
    align-items: center;
    margin-right: 0.5em;
}

.link--form--checkbox-row label ion-icon {
    font-size: 1.3em;
    margin-right: 0.4rem;
    transform: translateY(0em);
}

turbo-frame#pornsearch form {
    display: flex;
    gap: 1rem;
}
turbo-frame#pornsearch form input#tags {
    flex: 1 1 400px;
    margin: 0;
}
turbo-frame#pornsearch form > button {
    flex: 0 0 auto;
    margin: 0;
}
turbo-frame#pornsearch form > button ion-icon {
    transform: translateY(0.1rem);
}

turbo-frame#pornsearch_results .results {
    display: grid;
    grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
    gap: 1rem;
    justify-items: center;
    align-items: center;
    margin: 2rem 0;
}
turbo-frame#pornsearch_results .results form {
    display: block;
    position: relative;
}

turbo-frame#pornsearch_results .results form button {
    display: block;
    background: none;
    padding: 0;
    width: 100%;
}

.link--response {
    padding: 0.9rem 1rem;
    text-align: center;
    font-size: 0.8rem;
    color: var(--text-light);
    transform: translateY(-100%);
    max-height: 0;
    opacity: 0;

    animation: linkResponseAppear 0.5s 1s normal forwards ease-in-out;
}
.link--response small {
    display: block;
}

@keyframes linkResponseAppear {
    0% {
        transform: translateY(-100%);
        max-height: 0;
        opacity: 0;
    }

    100% {
        transform: translateY(0);
        max-height: 60px;
        opacity: 1;
    }
}

.accent-block--link {
    padding: 40px 1.5rem 1.5rem;
}

.accent-block > .link {
    margin-top: 0;
}

@media screen and (max-width: 475px) {
    .link--device-in-use span {
        display: none;
    }
}

.tabs {
    display: grid;
    grid-template-rows: 30px auto auto;
    grid-template-areas: 'charm'
                         'labels'
                         'content';
}

.tabs__charm {
    color: var(--border);
    display: flex;
    align-items: center;
    gap: 7px;
    padding: 0 0 0.75rem;
}

.tabs__labels {
    grid-area: labels;
}

.tabs__labels button {
    background: var(--bg);
    font-weight: bold;
    border-radius: 0;
    margin: 0;
    color: var(--text);
}

.tabs__labels button[data-open=true] {
    background: var(--accent-bg);
}

.tabs__labels button + button {
    margin-left: 1rem;
}

.tab {
    grid-area: content;
    padding: 1rem 1.5rem 1.5rem;
    background: var(--accent-bg);
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
}

.tab[data-open=false] {
    display: none;
}

figcaption {
    max-height: 110px;
    overflow: scroll;
}

